<resources>
    <string name="app_name">Fundatec Heroes</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="novo">Novo por aqui?</string>
    <string name="login">Login</string>
    <string name="pepsiman_image">pepsiman image</string>
    <string name="salvar">Salvar</string>
    <string name="nome_do_heroi">Nome do herói</string>
    <string name="url_do_heroi">Imagem do herói</string>
    <string name="descricao_do_heroi">Descrição do herói</string>
    <string name="idade_do_heroi">Idade do herói</string>
    <string name="aniversario_do_heroi">Aniversário do herói</string>
    <string name="novo_usuario">Criar usuário</string>
    <string name="name">Nome do usuário</string>
</resources>